--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -15,12 +16,14 @@
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "graphql": "^16.8.1",
     "https-browserify": "^1.0.0",
     "metamask-react": "^2.7.0",
     "moralis": "^2.23.1",
     "next-share": "^0.27.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
