--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "crypto-browserify": "^3.12.0",
     "graphql": "^16.8.1",
     "https-browserify": "^1.0.0",
-    "metamask-react": "^2.7.0",
     "moralis": "^2.23.1",
-    "next-share": "^0.27.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "query-string": "^8.1.0",
@@ -30,9 +28,11 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
+    "wagmi": "^1.4.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.1.2"
   },
