--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/wagmi": "^3.2.0",
     "assert": "^2.1.0",
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
@@ -26,6 +27,7 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
