--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "@web3modal/wagmi": "^3.2.0",
     "assert": "^2.1.0",
     "axios": "^1.5.1",
@@ -20,12 +22,14 @@
     "crypto-browserify": "^3.12.0",
     "graphql": "^16.8.1",
     "https-browserify": "^1.0.0",
+    "moment": "^2.29.4",
     "moralis": "^2.23.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.13.0",
@@ -35,7 +39,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
-    "wagmi": "^1.4.5",
+    "wagmi": "^1.4.6",
     "web-vitals": "^2.1.4",
     "web3": "^4.1.2"
   },
